--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
 <body>
 
+  <head class="header-bg">
+    <div class="header">
+      <a href="./"><img src="/img/bikcraft.svg" alt="Bikecraft"></a>
+      <nav aria-label="primaria">
+        <ul>
+          <li> <a href="./bicicletas.html">Bicicletas</a></li>
+          <li> <a href="./bicicletas.html">Seguros</a></li>
+          <li> <a href="./bicicletas.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </head>
 </body>
 
 </html>
